apps/media/jellyseerr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyseer
  namespace: media
spec:
  selector:
    app: jellyseer
  ports:
    - name: webui
      port: 5055
      targetPort: 5055
