apps/media/jellyseerr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseer-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyseer.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: jellyseer
          port: 5055
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseer-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyseer.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: jellyseer
          port: 5055
  tls:
    secretName: jellyseer-tls
